estimation/byte_count/sim/wrapc/err.log
In file included from C:/Xilinx/Vitis_HLS/2021.2/include/floating_point_v7_0_bitacc_cmodel.h:144:0,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/hls_fpo.h:189,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/hls_half_fpo.h:64,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/hls_half.h:71,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/etc/ap_private.h:98,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/ap_common.h:658,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/ap_int.h:55,
                 from apatb_byte_count.cpp:7:
C:/Xilinx/Vitis_HLS/2021.2/include/gmp.h:63:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from C:/Xilinx/Vitis_HLS/2021.2/include/hls_fpo.h:189:0,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/hls_half_fpo.h:64,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/hls_half.h:71,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/etc/ap_private.h:98,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/ap_common.h:658,
                 from C:/Xilinx/Vitis_HLS/2021.2/include/ap_int.h:55,
                 from apatb_byte_count.cpp:7:
C:/Xilinx/Vitis_HLS/2021.2/include/floating_point_v7_0_bitacc_cmodel.h:136:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
C:/estimation/byte_count_bench.c++: In function 'int main()':
C:/estimation/byte_count_bench.c++:27:1: error: 'apatb_byte_count_sw' is not a member of 'bytecount'
  int result = bytecount::byte_count(data.data());
 ^~~~~~~~~
C:/estimation/byte_count_bench.c++:27:1: note: suggested alternative:
C:/estimation/byte_count_bench.c++:13:12: note:   'apatb_byte_count_sw'
  std::ifstream file ("tb_data\\zeros", std::ios::in|std::ios::binary|std::ios::ate);
            ^~~~~~~~~~~~~~~~~~~
make: *** [obj/byte_count_bench.c++_pre.c++.tb.o] Error 1
